# mds3d

./: README.md
open_gl/mds3d_td3/: CMakeLists.txt  README.md
open_gl/mds3d_td3/data/models/: test.off
open_gl/mds3d_td3/data/shaders/: second.vert  simple.frag  simple.vert
open_gl/mds3d_td3/ext/glbinding/: CMakeLists.txt
open_gl/mds3d_td3/src/: main.cpp  mesh.cpp  viewer.cpp  viewer.h
open_gl/mds3d_td4/: CMakeLists.txt  README.md
open_gl/mds3d_td4/data/models/: sphere.off
open_gl/mds3d_td4/data/shaders/: blinn.frag  blinn.vert  wire.frag  wire.vert
open_gl/mds3d_td4/src/: camera.cpp  main.cpp  mesh.cpp  mesh.h  viewer.cpp  viewer.h
open_gl/mds3d_td6/: README.md
open_gl/mds3d_td6/data/shaders/: simple.frag  simple.vert
open_gl/mds3d_td6/src/: viewer.cpp  viewer.h
open_gl/mds3d_td7/: CMakeLists.txt  README.md
open_gl/mds3d_td7/data/shaders/: simple.frag  simple.vert
open_gl/mds3d_td7/src/: mesh.cpp  viewer.cpp  viewer.h
ray_tracing/mds3d_td1/: README.md  mds3d_td1.md
ray_tracing/mds3d_td1/data/: petanque.exr  petanque.scn  phong.scn  terre-lune.scn  terre.exr.xmp  troisSpheres.exr  troisSpheres.exr.xmp  troisSpheres.scn
ray_tracing/mds3d_td1/include/: material.h  ray.h
ray_tracing/mds3d_td1/src/: direct.cpp  flat.cpp  main.cpp  material.cpp  normals.cpp  phong.cpp  plane.cpp  pointLight.cpp  scene.cpp  sphere.cpp  texcoords.cpp  whitted.cpp
ray_tracing/mds3d_td2/: CMakeLists.txt  README.md
ray_tracing/mds3d_td2/data/: petanque.scn  tw.scn
ray_tracing/mds3d_td2/include/: material.h  mesh.h  plane.h  ray.h  sphere.h
ray_tracing/mds3d_td2/src/: bvh.cpp  main.cpp  mesh.cpp  normals.cpp  phong.cpp  plane.cpp  pointLight.cpp  scene.cpp  sphere.cpp  whitted.cpp
